--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,26 @@ build = "build.rs"
 [dependencies]
 directories = "6.0.0"
 fatfs = "0.3.6"
-#gpt-parser = "0.0.10"
-iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "svg", "image"] }
+iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "svg", "image", "sipper"] }
 rs-drivelist = "0.9.4"
+reqwest = {  version = "0.12.15", features = ["stream", "rustls-tls-webpki-roots"] }
+tokio = "1.44.2"
+
+[target.'cfg(target_os="linux")'.dependencies]
+udisks2 = "0.3.1"
+libc = "0.2.172"
+
+
+[dev-dependencies]
+
+tokio = { version = "1.44.2", features = ["macros"] }
 
 [build-dependencies]
-windows_exe_info = {  version = "0.5", features = ["manifest", "versioninfo", "icon_ico"] }
+windows_exe_info = {  version = "0.5", features = [
+    "manifest",
+    "versioninfo",
+    "icon_ico",
+] }
 
 [profile.release]
 lto = true
@@ -20,4 +34,7 @@ codegen-units = 1
 opt-level = 3
 strip = true
 
-[package.metadata.winres]
+[package.metadata.bundle]
+name = "Golem GPU Imager"
+icon = ["resources/icon.ico"]
+
