--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
 tokio = { version = "1.44.2", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
+ethers-core = "2.0.10"
 
 [target.'cfg(target_os="linux")'.dependencies]
 udisks2 = "0.3.1"
