--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 ethereum-types = { version = "0.15.1", default-features = false }
 crunchy = "=0.2.2"
 toml = "0.8.2"
+anyhow = "1.0.98"
+gpt = "3.1.0"
+uuid = "1.8.0"
 
 [target.'cfg(target_os="linux")'.dependencies]
 udisks2 = "0.3.1"
