--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,25 @@ toml = "0.8.2"
 anyhow = "1.0.98"
 gpt = "3.1.0"
 uuid = "1.8.0"
+tokio-stream = "0.1.17"
+once_cell = "1.19.0"
+xz4rust = "0.2.1"
 
 [target.'cfg(target_os="linux")'.dependencies]
 udisks2 = "0.3.1"
 libc = "0.2.172"
+
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.52.0", features = [
+    "Win32_Foundation", 
+    "Win32_Storage_FileSystem",
+    "Win32_System_IO",
+    "Win32_System_Ioctl",
+    "Win32_System_SystemServices",
+    "Win32_Security",
+    "Win32_System_Threading",
+    "Win32_System_Console"
+]}
 
 
 [dev-dependencies]
