--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ windows-sys = { version = "0.52.0", features = [
     "Win32_System_Ioctl",
     "Win32_System_SystemServices",
     "Win32_Security",
+    "Win32_Security_Authorization",
     "Win32_System_Threading",
     "Win32_System_Console"
 ]}
