--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ serde_json = "1.0"
 sha2 = "0.10"
 tokio = { version = "1.44.2", features = ["full"] }
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
+tracing-appender = "0.2"
 ethereum-types = { version = "0.15.1", default-features = false }
 crunchy = "=0.2.2"
 toml = "0.8.2"
@@ -27,6 +28,7 @@ uuid = "1.8.0"
 tokio-stream = "0.1.17"
 once_cell = "1.19.0"
 xz4rust = "0.2.1"
+regex = "1.10.2"
 
 [target.'cfg(target_os="linux")'.dependencies]
 udisks2 = "0.3.1"
