Fix GPT backup header location and add build time display
- Add automatic GPT backup header relocation when device size exceeds image size
- Implement fix_gpt_backup_header() function with sector-aligned I/O for Windows compatibility
- Relocate backup GPT header from image end to device end and update CRC32 checksums
- Add build timestamp generation in build.rs using chrono
- Display build time alongside version in UI and logs
- Integrate GPT fix into image write process before configuration update

Resolves CRC validation errors that prevented configuration editing after flashing smaller images to larger devices.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ windows_exe_info = {  version = "0.5", features = [
     "versioninfo",
     "icon_ico",
 ] }
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
 
 [profile.release]
 lto = true
