Organize installer generators into platform-specific directories
- Create installers/ directory structure for windows/linux/macos
- Move existing Windows MSI files to installers/windows/
- Add Debian package configuration for Ubuntu/Linux
- Include build scripts and documentation for each platform
- Update .gitignore to exclude generated installer files

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,12 @@
 # Downloaded OS images
 /downloads/
 
-# Generated binaries
+# Generated binaries and installers
 /dist/
+*.deb
+*.msi
+*.dmg
+*.pkg
 
 # Dependency directory
 /.cargo/
