--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ futures-util = "0.3.30"
 hex = "0.4.3"
 iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "svg", "image", "sipper"] }
 rs-drivelist = "0.9.4"
-reqwest = {  version = "0.12.15", features = ["stream", "rustls-tls-webpki-roots", "json"] }
+reqwest = { version = "0.12.15", default-features = false, features = ["stream", "rustls-tls-webpki-roots", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sha2 = "0.10"
