Remove user flag from Docker MSI build to fix Wine permissions
The --user flag causes Wine permission issues in the WiX container.
Add post-build chown to fix output file permissions for GitHub Actions.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -219,9 +219,11 @@ jobs:
           docker run --rm \
             -v "$(pwd):/work" \
             -w /work \
-            --user "$(id -u):$(id -g)" \
             jkroepke/wixtoolset:latest \
             build installers/windows/installer.wxs -arch x64 -out "dist/$MSI_NAME" -v
+          
+          # Fix permissions on generated files
+          sudo chown -R runner:docker dist/
           
           # Verify MSI was created
           echo "Generated MSI:"
