Add profile-susteen compilation flag for specialized Golem GPU Imager build
This feature creates a specialized build of the Golem GPU Imager that:
- Uses only the "susteen" configuration preset fetched from remote config
- Displays only "susteen" OS image channel
- Implements virtual (non-persistent) preset system
- Auto-applies configuration for streamlined deployment

Key changes:
- Add profile-susteen feature flag to Cargo.toml
- Implement remote config fetching from http://63.176.129.155/config.toml
- Map environment variables correctly (YA_PAYMENT_NETWORK_GROUP, YA_NET_TYPE, SUBNET, YAGNA_METRICS_URL)
- Filter OS image channels to show only "susteen"
- Create virtual preset system that doesn't persist to disk
- Override preset management functions to prevent modifications

Build with: cargo build --features profile-susteen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ lto = false
 default = []
 enterprise = []
 debug = []
+profile-susteen = []
 
 [package.metadata.bundle]
 name = "Golem GPU Imager"
